# comprehensive_car_finder_with_links_documentation_v2_crewai-project

./: README.md  README_UI_INTEGRATION.md  SETUP_COMPLETE.md  UI_README.md  app.py  app_demo.py  env_example.txt  pyproject.toml  requirements.txt  run_real_app.sh  run_ui.py  start_app.sh
src/comprehensive_car_finder_with_links_documentation/: crew.py  main.py
src/comprehensive_car_finder_with_links_documentation/config/: agents.yaml  tasks.yaml
static/css/: style.css
static/js/: script.js
templates/: index.html
