[project]
name = "comprehensive_car_finder_with_links_documentation"
version = "0.1.0"
description = "comprehensive_car_finder_with_links_documentation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0",
    "flask>=2.3.0,<3.0.0"
]

[project.scripts]
comprehensive_car_finder_with_links_documentation = "comprehensive_car_finder_with_links_documentation.main:run"
run_crew = "comprehensive_car_finder_with_links_documentation.main:run"
train = "comprehensive_car_finder_with_links_documentation.main:train"
replay = "comprehensive_car_finder_with_links_documentation.main:replay"
test = "comprehensive_car_finder_with_links_documentation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
